# DeepResearch-RAG

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  worker.py
backend/: __init__.py
backend/api/: __init__.py  schemas.py  server.py
backend/core/: __init__.py  config.py  logging.py  prompts.py
backend/domain/: __init__.py  documents.py  interfaces.py  models.py  query_tasks.py  task_queue.py
backend/infrastructure/: __init__.py
backend/infrastructure/cache/: __init__.py  factory.py  redis_embedding_cache.py
backend/infrastructure/db/: __init__.py  factory.py  models.py  time.py
backend/infrastructure/documents/: __init__.py  factory.py  sqlalchemy_document_repository.py
backend/infrastructure/graph/: __init__.py  factory.py  llm_extractors.py  neo4j_graph.py
backend/infrastructure/llm/: __init__.py  factory.py  reranker.py
backend/infrastructure/parse/: __init__.py  splitter.py
backend/infrastructure/parse/enrichment_models/: __init__.py  pic_enrichment_model.py  table_enrichment_model.py
backend/infrastructure/parse/prompt/: VLM_prompt.py  __init__.py  formula_recognition_prompt.py  llm_chunk_preprocess_prompt.py  llm_formula_enrichment_prompt.py  table_repair_prompt.py
backend/infrastructure/query_tasks/: __init__.py  factory.py  sqlalchemy_query_task_repository.py
backend/infrastructure/repository/: __init__.py  factory.py  mappings.py  opensearch_store.py
backend/infrastructure/task_queue/: __init__.py  broker.py  factory.py  taskiq_task_queue_service.py
backend/services/: __init__.py  factory.py  ingestion_service.py  rag_service.py
backend/worker/: __init__.py  tasks.py
tests/: test_api_upload.py  test_document_repository.py
