[project]
name = "deepresearch-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiofiles>=25.1.0",
  "docling==2.58.0",
  "docling-core==2.49.0",
  "fastapi>=0.121.1",
  "jieba>=0.42.1",
  "json-repair>=0.53.0",
  "langchain-core>=0.2",
  "langchain-openai>=1.0.2",
  "langchain-text-splitters>=0.2",
  "neo4j>=5.22",
  "openai>=2.7.2",
  "opensearch-py[async]>=3.0.0",
  "aiohttp>=3.10.0",
  "pillow",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.18",
  "redis>=5.0",
  "tiktoken>=0.7",
  "httpx>=0.27",
  "uvicorn>=0.29.0",
  "langchain-community>=0.4.1",
  "langchain-ollama>=1.0.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
