[project]
name = "deepresearch-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiofiles>=25.1.0",
  "aiosqlite>=0.21.0",
  "docling==2.58.0",
  "docling-core==2.49.0",
  "fastapi>=0.121.1",
  "jieba>=0.42.1",
  "json-repair>=0.53.0",
  "langchain-core>=0.2",
  "langchain-openai>=1.0.2",
  "langchain-text-splitters>=0.2",
  "neo4j>=5.22",
  "openai>=2.7.2",
  "opensearch-py[async]>=3.0.0",
  "aiohttp>=3.10.0",
  "pillow",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.18",
  "redis>=5.0",
  "sqlalchemy>=2.0.45",
  "taskiq>=0.11.18",
  "taskiq-redis>=1.0.6",
  "tiktoken>=0.7",
  "pytest>=8.4.0",
  "pytest-asyncio>=0.26.0",
  "httpx>=0.27",
  "uvicorn>=0.29.0",
  "langchain-community>=0.4.1",
  "langchain-ollama>=1.0.1",
  "pytest-cov>=7.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
